# sprite_editor

./: CMakeLists.txt  README.md  sprite.c  sprite_sheet.csv
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  compile.sh
include/: palette.h
src/: main.c  t.c
